<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ERApp</string>
    <string name="action_settings">Settings</string>
    <string name="button_main_Login">Log In</string>
    <string name="button_main_Register">Register</string>
    <string name="text_Register_Info">Please enter the following information</string>
    <string name="text_Register_Con_Password">Confirm your password</string>
    <string name="text_Report_Result">Your Expense Report</string>
    <string name="edit_message_name">Name</string>
    <string name="edit_message_email">Email</string>
    <string name="edit_message_password">Password</string>
    <string name="button_Register_Submit">Submit</string>
    <string name="dialog_passwordNotMatch">Your password does not match!</string>
    <string name="dialog_signUp_error">Your sign up does not succeed.</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_input_empty">Please enpter the information.</string>
    <string name="dialog_signIn_error">You input the wrong user name or password.</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="button_user_dashboard_view_Expense">View Expense</string>
    <string name="button_user_dashboard_add_Expense">Add Expense</string>
    <string name="button_user_dashboard_report_Expense">Expense Report</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_viewResult_other">Other View</string>
    <string name="button_viewResult_report">Get Report</string>
    <string name="button_Report_Submit">Export</string>
    <string name="button_today_add_expense">Add Expense</string>
    <string name= "text_report_period">Please select the period for report</string>
    <string-array name="period_array">
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
        <item>4 Month</item>
        <item>5 Month</item>
        <item>6 Month</item>
        <item>1 Year</item>
        <item>2 Year</item>
    </string-array>
    
    <string name="title_activity_view_expense">View Expense</string>
    <string name="viewExpense_period">Period</string>
    <string name="viewExpense_category">Category</string>
    <string name="button_viewExpense_view">View</string>
    <string name="button_viewExpense_cancel">Cancel</string>
    <string name="title_activity_user_register">User Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="imageView_Logo">Logo</string>
    <string name="title_activity_view_result_list">ViewResultList</string>
    <string name="title_activity_report_result">ReportResult</string>
    <string name="title_activity_this_week">ThisWeek</string>
    <string name="title_activity_this_month">ThisMonth</string>
    <string name="title_activity_this_year">ThisYear</string>
    <string name="title_activity_all">All</string>
    <string name="no_expenses_text">No expenses available to show, Please add expenses</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_expense_report">Expense Report</string>
    
    <!-- Atif String values -->
    

    <string name="edit_message">Enter a message</string>
    <string name="button_add">Add Expense</string>
    <string name="title_activity_display_message">Add Expense</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_view_expenses">Expenses</string>
    <string name="button_submit">Submit</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="text_item">Product/Service</string>
    <string name="text_price">Price</string>
    <string name="text_category">Category</string>
    <string name="spinner_category">Category</string>
    <string name="text_comment">Comment</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_addEmployee">Add Employee</string>
    <string name="title_activity_correctExpenses">Correct Expenses</string>
    <string name="title_activity_expense">Expense</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_correction">Correct Expenses</string>
    <string name="button_addEmployee">Add Employee</string>
    <string name="button_view">View Expenses</string>
    <string name="text_verifyPass">Verify password</string>
    <string name="text_Merchant">Merchant</string>
    <string name="text_Description">Description</string>
    <string name="text_Payment">Payment Type</string>
    <string name="text_date">Date</string>
    <string name="check_corporate">Corporate</string>
    <string name="button_adds">Add</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="button_addfromfile">Add from file</string>
<string name="hint_name">Name</string>
<string name="action_sortDate">Sort by date</string>
<string name="action_sortPrice">Sort by price</string>
<string name="action_export">Export to CSV</string>
    <string-array name="entries_category">
        <item>Category</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Food</item>
        <item>Fuel</item>
        <item>Lodging</item>
        <item>Office</item>
        <item>Phone</item>
        <item>Transportation</item>
    </string-array>
    <string-array name="entries_currency">
        <item>AUD</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>USD</item>
    </string-array>
    <string-array name="entries_payment">
        <item>Card</item>
        <item>Cash</item>
        <item>Check</item>
        <item>Transfer</item>
    </string-array>

</resources>
